# langsight

./: .dockerignore  .env.example  .gitignore  .langsight.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROGRESS.md  README.md  ROADMAP_AND_SMB_ADOPTION.md  SECURITY.md  action.yml  alembic.ini  docker-compose.yml  otel-collector.yaml  pyproject.toml  skills-lock.json
.claude/: settings.json
.claude/agents/: debugger.md  docs-keeper.md  git-keeper.md  release-engineer.md  sample-data-keeper.md  security-reviewer.md  security-tester.md  seo-optimizer.md  tester.md  ui-designer.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mcp-scan-example.yml  release.yml
assets/: linkedin-cover.html
dashboard/: .dockerignore  Dockerfile  dagre.d.ts  eslint.config.mjs  jest.config.ts  jest.setup.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  restart-dev.sh  tailwind.config.ts
dashboard/__tests__/components/: aria-regression.test.tsx  chart-primitives.test.tsx  date-range-filter.test.tsx  lineage-graph.test.tsx  login.test.tsx  monitoring-content.test.tsx  prevention-agent-dropdown.test.tsx  session-header.test.tsx  session-metrics.test.tsx  sidebar.test.tsx  span-tree.test.tsx  timestamp.test.tsx
dashboard/__tests__/e2e/: dashboard.spec.ts  error-boundary.spec.ts  fixtures.ts  health.spec.ts  login.spec.ts  overview.spec.ts  sessions.spec.ts
dashboard/__tests__/live/: live-page-merge-span.test.ts  live-page-seed.test.ts  live-page-sse-contract.test.ts  live-page-status.test.ts
dashboard/__tests__/security/: aria-regression.security.test.ts  date-range-filter.security.test.tsx  session-graph.security.test.ts  session-id-handling.security.test.ts  test-utils.ts  (+3 more)
dashboard/app/: error.tsx  globals.css  layout.tsx  page.tsx
dashboard/components/: agent-topology.tsx  date-range-filter.tsx  editable-field.tsx  health-tag-badge.tsx  lineage-graph.tsx  markdown-content.tsx  payload-slideout.tsx  providers.tsx  session-timeline.tsx  sidebar.tsx  timestamp.tsx  ui.tsx
dashboard/lib/: api.ts  auth.config.ts  auth.ts  live-utils.ts  project-context.tsx  session-graph.ts  types.ts  utils.ts
docs/: 00-principal-audit-report.md  01-product-spec.md  02-architecture-design.md  03-ui-and-features-spec.md  04-implementation-plan.md  05-risks-costs-testing.md  06-auto-capture-agent-reliability-plan.md  06-provider-setup.md  06-threat-model.md  07-agent-lineage-spec.md  08-adoption-strategy.md  09-v03-runtime-reliability-plan.md  11-positioning-strategy.md  12-seo-baseline-2026-04-10.md  langsight-positioning-deck.html
docs-site/: .mintlify-deploy  agents.mdx  alerts.mdx  anomaly-detection.mdx  costs-model-pricing.mdx  dashboard.mdx  database-connections.mdx  installation.mdx  introduction.mdx  live-view.mdx  mcp-servers.mdx  mint.json  monitoring.mdx  projects.mdx  quickstart.mdx  session-health.mdx  session-replay.mdx  slos.mdx  users.mdx
docs-site/agents/: prevention-config.mdx
docs-site/api-reference/: health.mdx  overview.mdx  security.mdx  traces.mdx
docs-site/cli/: costs.mdx  init.mdx  investigate.mdx  mcp-health.mdx  monitor.mdx  scan.mdx  security-scan.mdx  serve.mdx  sessions.mdx
docs-site/guides/: auto-discovery.mdx  langchain-rag.mdx
docs-site/mcp/: authentication.mdx  blast-radius.mdx  health-monitoring.mdx  mcp-servers-dashboard.mdx  project-scoping.mdx  quickstart.mdx  schema-drift.mdx  scorecard.mdx  server-discovery.mdx  tool-schemas.mdx
docs-site/providers/: claude.mdx  gemini.mdx  ollama.mdx  openai.mdx  overview.mdx
docs-site/sdk/: python.mdx
docs-site/self-hosting/: backup-restore.mdx  configuration.mdx  docker-compose.mdx  feature-matrix.mdx  production-hardening.mdx  production.mdx  redis.mdx  scaling.mdx  storage.mdx  troubleshooting.mdx  upgrading.mdx
docs/mcp/: 01-market-landscape.md  02-product-identity-positioning.md  03-feature-strategy-icp.md  04-top5-features-research.md  05-impact-analysis.md  06-onboarding.md  README.md
integrations/librechat/: README.md  langsight-plugin.js
load-tests/: README.md  agent_span_ingestion.js  dashboard_users.js
migrations/: env.py
migrations/versions/: 0eaccc40f932_add_model_pricing.py  5a5d53a4c81a_initial_schema.py  a1b2c3d4e5f6_add_project_id_to_agent_slos.py  b3c9e1f2a047_add_user_id_to_api_keys.py  c7d8e9f0a1b2_add_project_id_to_api_keys.py  d1e2f3a4b5c6_add_thinking_pricing.py  dc0bf058f21c_add_projects_and_members.py  e368ec31ce04_add_users_and_invites.py  f1a2b3c4d5e6_add_project_id_to_schema_and_alert.py
scripts/: export-seed-data.py  install-hooks.sh  quickstart.sh  seed-demo.py
scripts/hooks/: pre-push
src/langsight/: __init__.py  config.py  crypto.py  demo_seed.py  exceptions.py  models.py
strategy/: positioning-and-marketing.md
test-mcps/: README.md  docker-compose.yml
test-mcps/postgres-mcp/: .env.example  pyproject.toml  seed.sql  server.py
test-mcps/s3-mcp/: .env.example  pyproject.toml  server.py
tests/: conftest.py
tests/integration/: conftest.py
tests/regression/: test_health_pipeline.py  test_monitor_pipeline.py  test_security_pipeline.py
tests/security/: conftest.py  test_admin_rbac.py  test_auth_failure_modes.py  test_init_security.py  test_integration_security.py  test_lru_dos_protection.py  test_project_isolation.py  test_proxy_header_trust.py  test_redis_broadcaster_security.py  test_replay_isolation.py  test_scorecard_security.py  test_servers_security.py  test_settings_auth_regression.py  test_tenant_isolation.py
tests/unit/: conftest.py  test_config.py  test_cost_engine.py  test_exceptions.py  test_exceptions_adversarial.py  test_models.py  test_prevention_config_model.py  test_settings_monitor.py
website/: .browserslistrc  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
website/app/: globals.css  layout.tsx  page.tsx
website/components/: site-shell.tsx
website/public/: _headers  _redirects  generate-pngs.mjs  llm.txt  llms.txt  robots.txt  sitemap.xml
(+335 files in other folders)
