[project]
name = "langsight"
version = "0.3.2"
description = "Agent runtime reliability — prevent loops, enforce budgets, monitor MCP health, scan for CVEs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "LangSight", email = "hello@langsight.dev" }]
keywords = ["llm", "agents", "mcp", "observability", "reliability", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "click>=8.1",
    "rich>=13",
    "pydantic[email]>=2",
    "pydantic-settings>=2",
    "structlog>=24",
    "mcp>=1.0",
    "anyio>=4",
    "pyyaml>=6",
    "httpx>=0.27",
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "asyncpg>=0.31.0",
    "anthropic>=0.85.0",
    "openai>=2.28.0",
    "clickhouse-connect>=0.14.1",
    "slowapi>=0.1.9",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "prometheus-client>=0.21",
]

[project.scripts]
langsight = "langsight.cli.main:cli"

[project.urls]
Homepage = "https://langsight.dev"
Documentation = "https://docs.langsight.dev"
Repository = "https://github.com/langsight/langsight"
"Bug Tracker" = "https://github.com/langsight/langsight/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langsight"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration and not e2e' --cov=langsight --cov-report=term-missing --cov-fail-under=74 -v"
markers = [
    "unit: fast tests, no external deps",
    "integration: requires docker compose up (postgres + ClickHouse) — run with -m integration",
    "e2e: full CLI flow tests, requires full stack",
    "regression: cross-layer tests that verify features work end-to-end without real MCP",
    "security: adversarial tests for auth failure modes, isolation, and RBAC — always run offline",
]

[tool.coverage.run]
source = ["src/langsight"]
omit = ["*/cli/*"]  # CLI tested via e2e, not unit coverage

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "^\\s+\\.\\.\\.$",         # Protocol stub bodies — not executable
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = [
    "B008",  # do not perform function calls in default args (Pydantic uses this)
    "E501",  # line too long — not meaningful in prompt strings and markdown literals
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/langsight"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langchain", "langchain.*"]
ignore_missing_imports = true
