[project]
name = "postgres-mcp"
version = "0.1.0"
description = "PostgreSQL MCP server for LangSight testing"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
